--- a/style.css
+++ b/style.css
@@ -194,6 +194,13 @@ div.container {
   div.dtsp-verticalPanes {
     display: none;
   }
+  .container, .container-sm {
+    max-width: 100%;
+    padding: 0px;
+  }
+  body {
+    padding: 20px 10px;
+  }
 
   #hamburgerBtn {
     display: block;
