--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://use.typekit.net/hcn3xjs.css");
 
 body {
-  max-width: 1024px;
+  max-width: 2048px;
   /* margin: 0 auto; */
   padding: 20px 20px;
   font-size: 11px;
@@ -30,13 +30,30 @@ tr th, tr td {
     text-overflow: ellipsis;
 }
 
-tr th:first-child, tr td:first-child {
-    max-width: 100px;
-}
+/* tr th:first-child, tr td:first-child { */
+/*     max-width: 150px; */
+/* } */
 
-tr th:last-child, tr td:last-child {
-    max-width: 30px;
+
+/* table#myTable tr th:nth-child(3), */
+/* table#myTable tr td:nth-child(3) { */
+/*     text-transform: capitalize; */
+/*     max-width: 100px; */
+/* } */
+
+/* table#myTable tr th:nth-child(4), */
+/* table#myTable tr td:nth-child(4) { */
+/*     text-transform: capitalize; */
+/*     max-width: 30px; */
+/* } */
+table#myTable tr th:nth-child(5),
+table#myTable tr td:nth-child(5) {
+    text-transform: capitalize;
+    /* max-width: 125px; */
 }
+/* tr th:last-child, tr td:last-child { */
+/*     max-width: 30px; */
+/* } */
 
 table#myTable tr td:nth-child(1), table#myTable tr td:nth-child(2) {
     font-weight: 800;
@@ -111,8 +128,8 @@ div.dtsp-verticalContainer div.dtsp-verticalPanes{
     flex-grow: 1;
     flex-shrink: 0;
     flex-basis: 20%;
-    max-width: 300px;
-    min-width: 200px;
+    max-width: 350px;
+    min-width: 350px;
 }
  
 div.dtsp-verticalPanes {
