--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ div.container {
 }
 
 /* hide on mobile */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 965px) {
   div.dtsp-verticalPanes {
     display: none;
   }
@@ -227,10 +227,11 @@ div.container {
     padding: 10px;
     font-size: 16px;
     cursor: pointer;
+    margin-bottom: 1em;
   }
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 965px) {
   #hamburgerBtn {
     display: none;
   }
